--- a/Desafios/4-cuartoDesafio/src/views/realTimeProducts.handlebars
+++ b/Desafios/4-cuartoDesafio/src/views/realTimeProducts.handlebars
@@ -15,7 +15,9 @@
                 <th scope="col">Stock</th>
             </tr>
         </thead>
-        <tbody id="tbodyProducts"></tbody>
+        <tbody id="tbodyProducts">
+
+        </tbody>
     </table>
     <footer>
         {{> footer}}
