--- a/Desafios/4-cuartoDesafio/src/views/realTimeProducts.handlebars
+++ b/Desafios/4-cuartoDesafio/src/views/realTimeProducts.handlebars
@@ -19,8 +19,9 @@
 
         </tbody>
     </table>
-    <footer>
-        {{> footer}}
-    </footer>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.6.1/socket.io.js"></script>
-    <script src="/js/realTimeProd.js"></script>
+</main>
+<footer>
+    {{> footer}}
+</footer>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.6.1/socket.io.js"></script>
+<script src="/js/realTimeProd.js"></script>
